# openapi/golang/go/model_hive_frame.go
@@ -1,0 +1,33 @@
+/*
+ * Queensaver API
+ *
+ * Queensaver API to send in sensor data and retrieve it. It's also used for user management.
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type HiveFrame struct {
+
+	// The format of the frame
+	Function string `json:"function,omitempty"`
+}
+
+// AssertHiveFrameRequired checks if the required fields are not zero-ed
+func AssertHiveFrameRequired(obj HiveFrame) error {
+	return nil
+}
+
+// AssertRecurseHiveFrameRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of HiveFrame (e.g. [][]HiveFrame), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseHiveFrameRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aHiveFrame, ok := obj.(HiveFrame)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertHiveFrameRequired(aHiveFrame)
+	})
+}
